--- a/src/components/Home/Carousel/carousel.css
+++ b/src/components/Home/Carousel/carousel.css
@@ -5,8 +5,9 @@
 }
 
 
-.container {
+.mainCarouselcontainer {
     text-align: center;
+    min-height: 611px;
 }
 
 .carousel-inner{
